package com.narxoz.rpg.guild;

/**
 * Guild officer responsible for orders and mission coordination.
 */
public class Captain extends GuildMember {

    public Captain(String name, GuildMediator mediator) {
        super(name, mediator);
    }

    public void issueOrder(String topic, String payload) {
        // TODO: send a command message through the mediator.
        System.out.println("[Captain " + getName() + "] Issuing order on topic: " + topic);
        getMediator().dispatch(topic, this, payload);
    }

    @Override
    public void receive(String topic, GuildMember from, String payload) {
        // TODO: react to a guild-hall message without calling another colleague directly.
        String sender = (from != null) ? from.getName() : "The Council";
        System.out.println("[Captain " + getName() + "] Received from " + sender + " on " + topic + ": " + payload);
    }
}